--- a/live-examples/css-examples/basic-box-model/visibility.css
+++ b/live-examples/css-examples/basic-box-model/visibility.css
@@ -1,6 +1,5 @@
 .example-container {
-    background-color: #eee;
-    border: .75em solid;
+    border: 1px solid #c5c5c5;
     padding: .75em;
     width: 80%;
     max-height: 300px;
