--- a/live-examples/css-examples/basic-user-interface/resize.css
+++ b/live-examples/css-examples/basic-user-interface/resize.css
@@ -1,6 +1,6 @@
 #example-element {
   background: linear-gradient(135deg, #0ff 0%,#0ff 94%,#fff 95%);
-  border: 3px solid #000;
+  border: 3px solid #c5c5c5;
   overflow: auto;
   width: 250px;
   height: 250px;
