--- a/live-examples/css-examples/fonts/font-feature-settings.css
+++ b/live-examples/css-examples/fonts/font-feature-settings.css
@@ -18,5 +18,5 @@
 }
 
 .tabular {
-    border: 1px solid black;
+    border: 1px solid;
 }
