--- a/live-examples/css-examples/lists/list-style.css
+++ b/live-examples/css-examples/lists/list-style.css
@@ -4,6 +4,7 @@
 
 #example-element {
     width: 100%;
+    background: #f1f8ff30;
 }
 
 .output section {
